--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "debug": "ndb server.js",
     "watch.js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
     "build.js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
@@ -47,5 +48,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.20.0",
     "parcel-bundler": "^1.12.4"
+  },
+  "engines": {
+     "node": ">=10.0.0"
   }
 }
